Fix horizontal scroll on phoneview

--- a/src/components/NavMenu/NavMenu.module.scss
+++ b/src/components/NavMenu/NavMenu.module.scss
@@ -42,7 +42,7 @@
 
 @media only screen and (max-width: 720px) {
   .navMenu {
-    width: 100%;
+    width: 100dvw;
   }
 
   .sideNav {
