--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -223,11 +223,13 @@
 
 @media only screen and (max-width: 720px) {
   .note {
-    width: 100vw;
+    width: 100dvw;
+    overflow: hidden;
 
     .content {
       .rightSide {
-        width: 100%;
+        width: calc(100dvw - 42px - 24px);
+        overflow: hidden;
       }
     }
   }
